post_cc/inception-of-things/p2/confs/app-one.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-one
  template:
    metadata:
      labels:
        app: app-one
    spec:
      containers:
      - name: app-one
        image: paulbouwer/hello-kubernetes:1.8
---
apiVersion: v1
kind: Service
metadata:
  name: app-one-service
  labels:
    app: app-one-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-one
  type: ClusterIP
