post_cc/inception-of-things/p2/confs/app-three.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-three
  template:
    metadata:
      labels:
        app: app-three
    spec:
      containers:
      - name: app-three
        image: paulbouwer/hello-kubernetes:1.8
---
apiVersion: v1
kind: Service
metadata:
  name: app-three-service
  labels:
    app: app-three-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-three
  type: ClusterIP
