post_cc/inception-of-things/p2/confs/app-two.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: app-two
        image: paulbouwer/hello-kubernetes:1.8
---
apiVersion: v1
kind: Service
metadata:
  name: app-two-service
  labels:
    app: app-two-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: app-two
  type: ClusterIP
