post_cc/inception-of-things/p2/confs/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - host: "app1.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-one-service
              port:
                number: 80
    - host: "app2.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-two-service
              port:
                number: 80
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-three-service
              port:
                number: 80
